; ModuleID = '/home/carl/AnghaBench/freebsd/sbin/newfs_msdos/extr_mkfs_msdos.c_getstdfmt.c'
source_filename = "/home/carl/AnghaBench/freebsd/sbin/newfs_msdos/extr_mkfs_msdos.c_getstdfmt.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.TYPE_3__ = type { %struct.bpb, i32 }
%struct.bpb = type { i32 }

@stdfmt = common dso_local global %struct.TYPE_3__* null, align 8
@.str = private unnamed_addr constant [28 x i8] c"%s: unknown standard format\00", align 1
@llvm.used = appending global [1 x i8*] [i8* bitcast (i32 (i8*, %struct.bpb*)* @getstdfmt to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i32 @getstdfmt(i8* %0, %struct.bpb* %1) #0 {
  %3 = alloca i32, align 4
  %4 = alloca i8*, align 8
  %5 = alloca %struct.bpb*, align 8
  %6 = alloca i64, align 8
  %7 = alloca i64, align 8
  store i8* %0, i8** %4, align 8
  store %struct.bpb* %1, %struct.bpb** %5, align 8
  %8 = load %struct.TYPE_3__*, %struct.TYPE_3__** @stdfmt, align 8
  %9 = call i64 @nitems(%struct.TYPE_3__* %8)
  store i64 %9, i64* %6, align 8
  store i64 0, i64* %7, align 8
  br label %10

10:                                               ; preds = %26, %2
  %11 = load i64, i64* %7, align 8
  %12 = load i64, i64* %6, align 8
  %13 = icmp ult i64 %11, %12
  br i1 %13, label %14, label %23

14:                                               ; preds = %10
  %15 = load i8*, i8** %4, align 8
  %16 = load %struct.TYPE_3__*, %struct.TYPE_3__** @stdfmt, align 8
  %17 = load i64, i64* %7, align 8
  %18 = getelementptr inbounds %struct.TYPE_3__, %struct.TYPE_3__* %16, i64 %17
  %19 = getelementptr inbounds %struct.TYPE_3__, %struct.TYPE_3__* %18, i32 0, i32 1
  %20 = load i32, i32* %19, align 4
  %21 = call i64 @strcmp(i8* %15, i32 %20)
  %22 = icmp ne i64 %21, 0
  br label %23

23:                                               ; preds = %14, %10
  %24 = phi i1 [ false, %10 ], [ %22, %14 ]
  br i1 %24, label %25, label %29

25:                                               ; preds = %23
  br label %26

26:                                               ; preds = %25
  %27 = load i64, i64* %7, align 8
  %28 = add i64 %27, 1
  store i64 %28, i64* %7, align 8
  br label %10

29:                                               ; preds = %23
  %30 = load i64, i64* %7, align 8
  %31 = load i64, i64* %6, align 8
  %32 = icmp eq i64 %30, %31
  br i1 %32, label %33, label %36

33:                                               ; preds = %29
  %34 = load i8*, i8** %4, align 8
  %35 = call i32 @warnx(i8* getelementptr inbounds ([28 x i8], [28 x i8]* @.str, i64 0, i64 0), i8* %34)
  store i32 -1, i32* %3, align 4
  br label %44

36:                                               ; preds = %29
  %37 = load %struct.bpb*, %struct.bpb** %5, align 8
  %38 = load %struct.TYPE_3__*, %struct.TYPE_3__** @stdfmt, align 8
  %39 = load i64, i64* %7, align 8
  %40 = getelementptr inbounds %struct.TYPE_3__, %struct.TYPE_3__* %38, i64 %39
  %41 = getelementptr inbounds %struct.TYPE_3__, %struct.TYPE_3__* %40, i32 0, i32 0
  %42 = bitcast %struct.bpb* %37 to i8*
  %43 = bitcast %struct.bpb* %41 to i8*
  call void @llvm.memcpy.p0i8.p0i8.i64(i8* align 4 %42, i8* align 4 %43, i64 4, i1 false)
  store i32 0, i32* %3, align 4
  br label %44

44:                                               ; preds = %36, %33
  %45 = load i32, i32* %3, align 4
  ret i32 %45
}

declare dso_local i64 @nitems(%struct.TYPE_3__*) #1

declare dso_local i64 @strcmp(i8*, i32) #1

declare dso_local i32 @warnx(i8*, i8*) #1

; Function Attrs: argmemonly nounwind willreturn
declare void @llvm.memcpy.p0i8.p0i8.i64(i8* noalias nocapture writeonly, i8* noalias nocapture readonly, i64, i1 immarg) #2


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
